update updateRecodeDB tests

--- a/vignettes/getting_started.Rmd
+++ b/vignettes/getting_started.Rmd
@@ -19,10 +19,8 @@ knitr::opts_chunk$set(
 library(eatRecode)
 ```
 
-The `eatRecode` package helps you recode open text fields.
+The `eatRecode` package helps you to recode open text fields.
 The infrastructure is pretty straight forward: `eatRecode` draws on existing recode lists containing already recoded value pairs. All values in your data set that are already part of the recode list can be recoded automatically. All other values are handled manually, and can be added to the recode list in the end. Over time, your recode lists will grow, calling for less and less manual recodes every time. 
-
-Use a little example. 
 
 # Recode Lists
 A recode List always has to contain the two columns `oldValues` and `newValues`:
