configure vignette correctly

--- a/vignettes/getting_started.Rmd
+++ b/vignettes/getting_started.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Introduction"
+title: "getting_started"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{getting_started}
