updated: installing the package code line

--- a/vignettes/getting_started.Rmd
+++ b/vignettes/getting_started.Rmd
@@ -15,7 +15,7 @@ knitr::opts_chunk$set(
 ```
 
 ```{r setup}
-#remotes::install_github("eatRecode") 
+remotes::install_github("beckerbenj/eatRecode") 
 library(eatRecode)
 ```
 
